k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  labels:
    app: httpbin
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
