k8s/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-private
  namespace: httpbin
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/conditions.httpbin-service: |
      [{"field":"http-method","httpMethodValues":["POST"]}]
    alb.ingress.kubernetes.io/healthcheck-path: /status/200
    alb.ingress.kubernetes.io/healthcheck-port: "80"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
